[gd_scene load_steps=3 format=3 uid="uid://df6b7wkb3j4as"]

[ext_resource type="Script" uid="uid://dv8grno0qmrd8" path="res://scripts/maze_2d.gd" id="1_76rw7"]
[ext_resource type="PackedScene" uid="uid://yhwurjcsf343" path="res://scenes/maze_tml.tscn" id="2_76rw7"]

[node name="Maze2D-Test" type="Node2D"]
script = ExtResource("1_76rw7")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 200.0
offset_bottom = 31.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Pick method: "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
selected = 0
item_count = 6
popup/item_0/text = "Newest"
popup/item_0/id = 0
popup/item_1/text = "Oldest"
popup/item_1/id = 1
popup/item_2/text = "Cyclic"
popup/item_2/id = 2
popup/item_3/text = "Random"
popup/item_3/id = 3
popup/item_4/text = "Collapse"
popup/item_4/id = 4
popup/item_5/text = "Kitt"
popup/item_5/id = 5

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
placeholder_text = "Width"
context_menu_enabled = false
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
autowrap_mode = 2
text_direction = 1

[node name="TextEdit2" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
placeholder_text = "Height"
context_menu_enabled = false
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
autowrap_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Generate New Maze"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Generate Block Maze"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Hide BlockMaze"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Show visited cells"

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Stop"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Debug: "

[node name="wall1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Wall North"

[node name="wall2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Wall South"

[node name="wall3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Wall East"

[node name="wall4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Wall West"

[node name="walls" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "All Walls"

[node name="SubViewportContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_76rw7")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/wall1" to="." method="_on_wall_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/wall2" to="." method="_on_wall_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/wall3" to="." method="_on_wall_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/wall4" to="." method="_on_wall_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/walls" to="." method="_on_walls_pressed"]
